# sparseharness

./: .gitignore  CMakeLists.txt  README.md  TODO.md
CMakeModules/: FindOpenCL.cmake
app/: bfs.cpp  eigenvector.cpp  just_parser.cpp  pr.cpp  scc.cpp  spmv.cpp  sssp.cpp
app/harness/: harness_spmv.h
example/: kernel.json  kernel2.json  kernel3.json  kernel4.json  kernel5.json  kernel6.json  kernel7.json  runfile.csv  runfile2.csv  shortrunfile.csv  swrg-slcl-pmdp.json  updatekernels.sh
example/bfs/: awrg-alcl-alcl-edp-split-512.json  awrg-alcl-alcl-edp-split-8.json  glb-sdp.json  kernel.json  kernel2.json  kernel3.json  kernel4.json  kernel5.json  kernel6.json  kernel7.json  swrg-slcl-pmdp.json  swrg-slcl-sdp-chunk-128.json
example/pr/: kernel.json  kernel2.json  kernel3.json  kernel4.json  kernel5.json  kernel6.json  kernel7.json
example/scc/: kernel.json  kernel2.json  kernel3.json  kernel4.json  kernel5.json  kernel6.json  kernel7.json
example/spmv/: kernel.json  kernel2.json  kernel3.json  kernel4.json  kernel5.json  kernel6.json  kernel7.json
example/sssp/: awrg-alcl-alcl-edp-split-512.json  awrg-alcl-alcl-edp-split-8.json  glb-sdp.json  kernel.json  kernel2.json  kernel3.json  kernel4.json  kernel5.json  kernel6.json  kernel7.json  swrg-slcl-pmdp.json  swrg-slcl-sdp-chunk-128.json
inc/: OpenCL_utils.h  Run.h  arithexpr_evaluator.h  buffer_utils.h  cl_device_manager.h  cl_memory_manager.h  common.h  csds_timer.h  csv_utils.h  harness.h  kernel.h  kernel_config.h  kernel_utils.h  mmio.h  opencl_utils.h  options.h  prepared_kernel.h  run.h  sparse_matrix.h  spmv_gold.h  sql_stat.h  vector_generator.h
inc/executor/: Event.h  Executor.h  GlobalArg.h  KernelArg.h  Vector.h  VectorDef.h
inc/util/: LoggerDef.h
scripts/example/: bfs.sh  eigenvector.sh  pr.sh  runexample.sh  scc.sh  spmv.sh  sssp.sh
scripts/experiments/: all_kernel_eigenvector_test.sh  all_kernel_test.sh  analyse.sh  gather_all.sh  run_all.sh  run_experiment.sh  run_generic_experiment.sh  run_gunrock_experiment.sh
scripts/experiments/analysis/: best_kernel_for_matrix.sql
scripts/experiments/postprocessing/: build_query.sh  build_query_from_archives.sh  run_query.sh
scripts/parser_perf/: profile_parser.sh
scripts/repo/: generate_runfile.sh  updatekernels.sh
src/: OpenCL_utils.cpp  Run.cpp  arithexpr_evaluator.cpp  csds_timer.cpp  kernel.cpp  kernel_config.cpp  mmio.cpp  prepared_kernel.cpp  run.cpp  sparse_matrix.cpp
src/executor/: DeviceBuffer.cpp  Executor.cpp  GlobalArg.cpp
src/util/: Logger.cpp
